actix-web-thiserror/tests/compile-fail/status-code-missing.stderr
error: proc-macro derive panicked
 --> tests/compile-fail/status-code-missing.rs:4:24
  |
4 | #[derive(Debug, Error, ResponseError)]
  |                        ^^^^^^^^^^^^^
  |
  = help: message: Invalid #[response] options: next token: None
